Add region, optimize API calls, and suggest bar

--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -11,6 +11,19 @@
   </div>
 </div>
 
+<ul *ngIf="mostrarSugerencias" class="list-group">
+  <li *ngFor="let pais of paisesSugeridos" class="list-group-item list-group-action">
+    <a [routerLink]="['/pais', pais.cca2]" class="nav-link">
+      {{ pais.name.official }}
+    </a>
+  </li>
+  <li (click)="buscarSugerido( termino)" class="list-group-item list-group-action">
+    <a class="nav-link">
+      Buscar "{{ termino }}"
+    </a>
+  </li>
+</ul>
+
 <hr>
 <div *ngIf="hayError" class="alert alert-danger">
   No se encontró nada con el término {{ termino }}
