--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,29 @@
-<p>por-region works!</p>
+<h2>Buscar por región <small> {{ regionActiva | titlecase }} </small></h2>
+<hr>
+
+<h5>Seleccione la región</h5>
+
+<div class="row">
+  <div class="col">
+    <!-- [class.btn-primary]="region === regionActiva" -->
+    <!-- [ngClass]="{
+      'btn-primary': regionActiva === region,
+      'btn-outline-primary': regionActiva !== region
+    }" -->
+    <button 
+      *ngFor="let region of regiones" 
+      (click)="activarRegion( region );"
+      class="btn me-2"
+      [class]="getClaseCss( region )"
+      
+    >
+      {{ region | titlecase }}
+    </button>
+  </div>
+</div>
+
+<div *ngIf="paises.length > 0" class="row mt-4">
+  <div class="col">
+    <app-pais-tabla [paises]="paises"></app-pais-tabla>
+  </div>
+</div>
